[package]
name = "pullauta"
authors = ["Raphael Stefanini <raphael@routechoices.com>"]
version = "2.3.1"
edition = "2021"
description = "Tool to generates orienteering maps from classified LiDAR data"
readme = "README.md"
repository = "https://github.com/rphlo/karttapullautin"
license-file = "LICENSE"
keywords = ["map", "mapping", "lidar", "orienteering", "laz", "las"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
image = { version = "0.25", default-features = false, features = [
	"rayon",
	"png",
	"jpeg",
] }

imageproc = { version = "0.25.0", default-features = false, features = [
	"rayon",
] }

las = { version = "0.9", features = ["laz"] }
rand = "0.8.5"
rust-ini = "0.21"
rustc-hash = "2.0"
shapefile = "0.6.0"
skia-safe = "0.78"
zip = { version = "2.2", default-features = false, features = [
	"bzip2",
	"deflate",
	"deflate64",
	"lzma",
	"zstd",
] }
log = "0.4"
env_logger = "0.11"
